--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Samosa Invaders</title>
+    <title>Pot Smash</title>
   </head>
   <body style="margin: auto; overflow: hidden; touch-action: none;">
     <canvas id="app"></canvas>
